Bug 944706 - Tracelogging: Make it possible to flush an incomplete tree, r=bbouvier